Prevent too big requests bodies

--- a/public/homepage/styles.css
+++ b/public/homepage/styles.css
@@ -29,6 +29,7 @@
     font-size: 20px;
     color: #8B52FE;
     text-decoration: none;
+    overflow: hidden;
 }
 
 .title:hover {
