--- a/public/thread/styles.css
+++ b/public/thread/styles.css
@@ -15,6 +15,7 @@
 
 .comment_content {
     width: 100%;
+    overflow: hidden;
 }
 
 .author {
